<resources>
    <string name="app_name">Real Estate Manager</string>

    <!--Login Screen-->
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_email_sent">Password Reset Email Sent</string>

    <!--Main Screen Details-->
    <string name="surface_area">Surface Area</string>
    <string name="location">Location</string>
    <string name="number_sq_m">%1$d sq m</string>
    <string name="dollar_sign">$%1$s</string>
    <string name="currency_decimal">%,.2f</string>
    <string name="currency">%,d</string>
    <string name="media">Media</string>
    <string name="description">Description:</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="listing_info">Listing Info</string>
    <string name="listed_on">Listed On %1$s</string>
    <string name="by_agent">By %1$s</string>
    <string name="full_listing">#1$s\n%2$s\n%3$s</string>
    <string name="sold_on">Sold On %1$s</string>
    <string name="sold_caps">SOLD</string>

    <!--Add House Fragment-->
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="borough">Borough</string>
    <string name="zip">Zip</string>
    <string name="stats">Stats</string>
    <string name="price">Price $</string>
    <string name="area">Area</string>
    <string name="sq_m">sq m</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="about">About</string>
    <string name="type">Type</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="remove_image">REMOVE IMAGE</string>
    <string name="add_house">ADD HOUSE</string>
    <string name="update_house">UPDATE HOUSE</string>
    <string name="images">Images</string>
    <string name="room">Room</string>
    <string name="url">URL</string>
    <string name="sale">Sale</string>

    <!--House Types-->
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="duplex">Duplex</string>
    <string name="penthouse">Penthouse</string>

    <!--Icons-->
    <string name="add_a_house">Add A House</string>
    <string name="update_a_house">Update A House</string>
    <string name="main">main</string>
    <string name="search_houses">Search Houses</string>
    <string name="logout">Log Out</string>
    <string name="map">Map</string>
    <string name="loan_simulator">Loan Simulator</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>

    <!-- Search Houses Fragment-->
    <string name="price_from_">Price From $</string>
    <string name="to_dollars">To $</string>
    <string name="house_type">House Type</string>
    <string name="any">Any</string>
    <string name="area_from">Area From</string>
    <string name="sq_m_to">sq m    To</string>
    <string name="rooms_from">Rooms From</string>
    <string name="bathrooms_from">Bathrooms From</string>
    <string name="bedrooms_from">Bedrooms From</string>
    <string name="agent">Agent</string>
    <string name="list_date_from">List Date From</string>
    <string name="sold">Sold</string>
    <string name="sold_question">Sold?</string>
    <string name="not_sold">Not Sold</string>
    <string name="sale_date_from">Sale Date From</string>
    <string name="save">Save</string>
    <string name="to">To</string>

    <!-- Map Fragment -->
    <string name="you_are_here">You Are Here</string>

    <!-- Settings Fragment -->
    <string name="location_mode">Location Mode</string>
    <string name="actual">Actual</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- Instructions Fragment -->
    <string name="login_screen">Login Screen</string>
    <string name="login_screen_1">When you open the app, if you are not logged in, the app will open on the Login screen.</string>
    <string name="login_screen_2">If you wish to log in as an existing user, fill out the Email and Password fields.</string>
    <string name="login_screen_3">If you wish to log in as a new user, click New Account. Two new fields will appear (Display Name and Reenter Password). Fill out all four fields.</string>
    <string name="login_screen_4">After logging in, the Main screen will be displayed.</string>
    <string name="login_screen_5">Clicking the Logout icon will show the Login screen.</string>
    <string name="main_screen">Main Screen</string>
    <string name="main_screen_1">When you open the app, if you are logged in, the app will open on the Main screen.</string>
    <string name="main_screen_2">Clicking the House icon will show the Main screen.</string>
    <string name="main_screen_3">On the left of the screen, a list shows all houses that have been added to the database. Each house\'s type (House, Flat, Duplex, Penthouse), borough, and price is shown.</string>
    <string name="main_screen_4">Clicking a house in the list display\'s that house\'s information. By default, information is shown for the first house in the list.</string>
    <string name="main_screen_5">The house\'s description, surface area, number of rooms, number of bathrooms, number of bedrooms, and address are shown. A map is also shown centered on the house\'s location.</string>
    <string name="main_screen_6">If the house has images, they are displayed on the top of the screen.</string>
    <string name="map_screen">Map Screen</string>
    <string name="map_screen_1">Clicking the Map icon will show the Map screen.</string>
    <string name="map_screen_2">The Map screen shows a map, centered on the location you chose in your settings, with markers for nearby houses.</string>
    <string name="map_screen_3">Clicking a house will show the house type and price. Clicking that will show the Main Screen with that house\'s information shown.</string>
    <string name="add_house_screen">Add House Screen</string>
    <string name="add_house_screen_1">Clicking the Plus icon will show the Add House screen, which allows you to add a house to the list.</string>
    <string name="add_house_screen_2">Clicking Add House adds the house to the list using the information provided.</string>
    <string name="add_house_screen_3">All fields must be filled out, except images which are optional.</string>
    <string name="add_house_screen_4">To add images, enter the room that is visible in the image and the URL of the image. Then, click Add Image.</string>
    <string name="add_house_screen_5">To remove the most recently added image, click Remove Image.</string>
    <string name="edit_house_screen">Edit House Screen</string>
    <string name="edit_house_screen_1">Clicking the Edit icon will show the Edit House screen, which allows you to edit a house on the list.</string>
    <string name="edit_house_screen_2">Most functions of the Edit House screen are the same as in the Add House screen.</string>
    <string name="edit_house_screen_3">You may edit a house only if you are the person who added it.</string>
    <string name="search_houses_screen">Search Houses Screen</string>
    <string name="search_houses_screen_1">Clicking the Search icon will show the Search Houses screen, which allows you to only show houses that fit your desired criteria.</string>
    <string name="search_houses_screen_2">All fields are optional. If a field is left blank, that search criteria will be ignored.</string>
    <string name="search_houses_screen_3">Clicking Search Houses will show the Main screen with the list filtered to match your search criteria, if at least one house matches.</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="settings_screen_1">The Settings screen allows you to customize your settings.</string>
    <string name="settings_screen_2">Your location settings are used when viewing the Map screen. You may either use your actual location or a manually entered location.</string>

    <!-- Notifications -->
    <string name="property_added">Property Added</string>
    <string name="property_added_details">%1$s for $%2$s in %4$s added.</string>
    <string name="property_updated">Property Updated</string>
    <string name="property_updated_details">%1$s for $%2$s in %4$s updated.</string>

    <!-- Loan Simulator -->
    <string name="price_placeholder">00,000,000</string>
    <string name="time">Time</string>
    <string name="years">years</string>
    <string name="interest">Interest</string>
    <string name="calculate">Calculate</string>
    <string name="payment">Payment $</string>
    <string name="down_payment">Down $</string>
    <string name="payment_placeholder">000,000.00</string>
    <string name="date">Date</string>
    <string name="principal">Principal</string>
    <string name="balance">Balance</string>
    <string name="date_text">%1$s 1, %2$d</string>

    <!-- Error Messages -->
    <string name="no_search_results">No houses match your search.</string>
    <string name="fields_empty">Please fill in all fields.</string>
    <string name="no_images_added_yet">No images added yet.</string>
    <string name="no_property_selected">No property selected.</string>
    <string name="not_agent">You are not the agent in charge of this property.</string>
    <string name="email_required">Email is required.</string>
    <string name="email_password_required">Email and Password are required.</string>
    <string name="passwords_must_match">Passwords must match.</string>
    <string name="email_displayname_password_reenter_required">Email, Display Name, Password, and Reenter Password are required.</string>
    <string name="time_empty">Please fill the Time field.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="no_internet">No internet connection.</string>
</resources>
