<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/sectionName"
            android:text="@string/login_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/login_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/login_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/login_screen_3" />

        <TextView
            style="@style/sectionText"
            android:text="@string/login_screen_4" />

        <TextView
            style="@style/sectionText"
            android:text="@string/login_screen_5" />

        <TextView
            style="@style/sectionName"
            android:text="@string/main_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_3" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_4" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_5" />

        <TextView
            style="@style/sectionText"
            android:text="@string/main_screen_6" />

        <TextView
            style="@style/sectionName"
            android:text="@string/map_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/map_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/map_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/map_screen_3" />

        <TextView
            style="@style/sectionName"
            android:text="@string/add_house_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/add_house_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/add_house_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/add_house_screen_3" />

        <TextView
            style="@style/sectionText"
            android:text="@string/add_house_screen_4" />

        <TextView
            style="@style/sectionText"
            android:text="@string/add_house_screen_5" />

        <TextView
            style="@style/sectionName"
            android:text="@string/edit_house_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/edit_house_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/edit_house_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/edit_house_screen_3" />

        <TextView
            style="@style/sectionName"
            android:text="@string/search_houses_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/search_houses_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/search_houses_screen_2" />

        <TextView
            style="@style/sectionText"
            android:text="@string/search_houses_screen_3" />

        <TextView
            style="@style/sectionName"
            android:text="@string/settings_screen" />

        <TextView
            style="@style/sectionText"
            android:text="@string/settings_screen_1" />

        <TextView
            style="@style/sectionText"
            android:text="@string/settings_screen_2" />
    </LinearLayout>
</ScrollView>