<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main"
        android:title="@string/app_name"
        android:icon="@drawable/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/add"
        android:title="@string/add_a_house"
        android:icon="@drawable/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:title="@string/search_houses"
        android:icon="@drawable/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="always" />
</menu>