<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login">
    <action android:id="@+id/action_logout"
        app:destination="@id/login"
        app:enterAnim="@anim/push_right_in"
        app:exitAnim="@anim/push_right_out" />
    <fragment android:id="@+id/add"
        android:name="com.mathgeniusguide.realestatemanager.ui.AddHouseFragment"
        android:label="@string/add_a_house"
        tools:layout="@layout/add_fragment">
    </fragment>
    <fragment android:id="@+id/map"
        android:name="com.mathgeniusguide.realestatemanager.ui.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/map_fragment">
        <action android:id="@+id/action_map_click"
            app:destination="@id/main"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
    </fragment>
    <fragment android:id="@+id/login"
        android:name="com.mathgeniusguide.realestatemanager.ui.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment">
        <action android:id="@+id/action_login"
            app:destination="@id/main"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
    </fragment>
    <fragment android:id="@+id/edit"
        android:name="com.mathgeniusguide.realestatemanager.ui.EditHouseFragment"
        android:label="@string/update_a_house"
        tools:layout="@layout/add_fragment">
    </fragment>
    <fragment android:id="@+id/search"
        android:name="com.mathgeniusguide.realestatemanager.ui.SearchHousesFragment"
        android:label="@string/search_houses"
        tools:layout="@layout/search_houses_fragment">
        <action android:id="@+id/action_search_to_main"
            app:destination="@id/main"
            app:enterAnim="@anim/push_right_in"
            app:exitAnim="@anim/push_right_out" />
    </fragment>
    <fragment android:id="@+id/main"
        android:name="com.mathgeniusguide.realestatemanager.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action android:id="@+id/action_main_to_add"
            app:destination="@id/add"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
        <action android:id="@+id/action_main_to_edit"
            app:destination="@id/edit"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
        <action android:id="@+id/action_main_to_search"
            app:destination="@id/search"
            app:enterAnim="@anim/push_left_in"
            app:exitAnim="@anim/push_left_out" />
    </fragment>
    <fragment android:id="@+id/settings"
        android:name="com.mathgeniusguide.realestatemanager.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment">
    </fragment>
    <fragment android:id="@+id/instructions"
        android:name="com.mathgeniusguide.realestatemanager.ui.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/instructions_fragment">
    </fragment>
</navigation>