<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/emailField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/displayNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel" />

        <TextView
            android:id="@+id/displayNameLabel"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/displayNameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailField" />

        <EditText
            android:id="@+id/displayNameField"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/passwordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/displayNameLabel" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/passwordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/displayNameField" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/reenterPasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/reenterPasswordLabel"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/reenter_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/reenterPasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField" />

        <EditText
            android:id="@+id/reenterPasswordField"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reenterPasswordLabel"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/reenterPasswordField"
            app:layout_constraintTop_toBottomOf="@id/reenterPasswordField" />

        <Button
            android:id="@+id/newAccountButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/reenterPasswordField"
            app:layout_constraintTop_toTopOf="@id/signInButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <!-- code generator

    emailLabel, tvb20, 450, w, sm10, c
    emailField, et20, 450, w, m, c
    displayNameLabel, tvb20, 450, w, m, c
    displayNameField, et20, 450, w, m, c
    passwordLabel, tvb20, 450, w, m, c
    passwordField, et20, 450, w, m, c
    reenterPasswordLabel, tvb20, 450, w, m, c
    reenterPasswordField, et20, 450, w, m, c
    signInButton, bub20, 220, w, 7,, 7*
    newAccountButton, bub20, 220, w, 8*,,, 7*

    -->